<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/profilePageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/userProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:text="@string/userProfile"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profileSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/profileSurname"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/profileName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/profileID"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileGPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/profileGPA"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileCreationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/profileCreationDate"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/profileHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profileHistory"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/accessHistoryList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:textStyle="normal"
            />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>